fix: add word-wrap to About Section in profile page. Resolve #50

--- a/src/pages/profile/components/About/about.module.scss
+++ b/src/pages/profile/components/About/about.module.scss
@@ -1,6 +1,7 @@
 @import '@/shared/styles/mixins.scss';
 
 .about {
+  word-wrap: break-word;
   width: 100%;
   border-radius: 20px;
   padding: 12px 20px 16px;
